# PowerController

./: README.md
I2C_Peripheral/: I2C_Peripheral.ino
Thingy53/: CMakeLists.txt  prj.conf
Thingy53/boards/: thingy53_nrf5340_cpuapp.overlay
Thingy53/ei-model/model-parameters/: anomaly_clusters.h  anomaly_types.h  dsp_blocks.h  model_metadata.h  model_variables.h
Thingy53/src/: main.cpp
